--- a/styles/cartStyle.css
+++ b/styles/cartStyle.css
@@ -89,7 +89,7 @@ button{
     margin-bottom:30px;
 }
 .img-part{
-    width:30%;
+    width:35%;
 }
 .det-part{
     width:80%;
@@ -104,7 +104,7 @@ button{
     align-self: flex-end;
     justify-self:center;
     margin-right:30px;
-    margin-top:40px;
+    margin-top:30px;
     color:var(--cyan-blue);
     cursor:pointer;
 }
@@ -127,17 +127,21 @@ button{
         justify-content: center;
         align-items:center;
         flex-wrap:wrap;
+        width:100%;
     }
     .pdt-container{
-       width:50%;
+       width:60%;
     }
    .cart-section{
     width:100%;
    }
    .cart-container{
-    width:70%;
+    width:90%;
    }
    .img-part{
-    width:50%;
+    width:60%;
+   }
+   button>span{
+    display:none;
    }
 }
